--- a/apache/templates/envvars.j2
+++ b/apache/templates/envvars.j2
@@ -14,8 +14,8 @@ fi
 # Since there is no sane way to get the parsed apache2 config in scripts, some
 # settings are defined via environment variables and then used in apache2ctl,
 # /etc/init.d/apache2, /etc/logrotate.d/apache2, etc.
-export APACHE_RUN_USER={{ httpd_user }}
-export APACHE_RUN_GROUP={{ httpd_group }}
+export APACHE_RUN_USER={{ apache_user }}
+export APACHE_RUN_GROUP={{ apache_group }}
 export APACHE_PID_FILE=/var/run/apache2$SUFFIX.pid
 export APACHE_RUN_DIR=/var/run/apache2$SUFFIX
 export APACHE_LOCK_DIR=/var/lock/apache2$SUFFIX
