--- a/graphite/templates/local_settings.py.j2
+++ b/graphite/templates/local_settings.py.j2
@@ -12,7 +12,7 @@
 # If your graphs appear to be offset by a couple hours then this probably
 # needs to be explicitly set to your local timezone.
 #TIME_ZONE = 'America/Los_Angeles'
-TIME_ZONE = {{ graphite_webapp_tz|default('Europe/Paris') }}
+TIME_ZONE = '{{ graphite_webapp_tz|default('Europe/Paris') }}'
 
 # Override this to provide documentation specific to your Graphite deployment
 #DOCUMENTATION_URL = "http://graphite.readthedocs.org/"
@@ -47,7 +47,7 @@ TIME_ZONE = {{ graphite_webapp_tz|default('Europe/Paris') }}
 # Change only GRAPHITE_ROOT if your install is merely shifted from /opt/graphite
 # to somewhere else
 #GRAPHITE_ROOT = '/opt/graphite'
-GRAPHITE_ROOT = {{ graphite_venv_path|default('/opt/graphite') }}
+GRAPHITE_ROOT = '{{ graphite_venv_path|default('/opt/graphite') }}'
 
 # Most installs done outside of a separate tree such as /opt/graphite will only
 # need to change these three settings. Note that the default settings for each
