--- a/apache/templates/virtualhost.j2
+++ b/apache/templates/virtualhost.j2
@@ -1,10 +1,9 @@
 # {{ ansible_managed }}
-<VirtualHost *:80>
+<VirtualHost {{ interfaces|default('*') }}:{{ port|default('80') }}>
     ServerName {{ vhost }}
-    ServerAdmin {{ apache_admin|default('admin@localhost')}}
-    
-    DocumentRoot {{ apache_root }}/{{ vhost }}
-    <Directory {{ apache_root }}/{{ vhost }}>
+
+    DocumentRoot {{ docroot }}
+    <Directory {{ docroot }}>
         Options -Indexes FollowSymLinks MultiViews
         AllowOverride All
         Order allow,deny
