--- a/nginx/templates/server.conf.j2
+++ b/nginx/templates/server.conf.j2
@@ -28,7 +28,7 @@ server {
     }
 
 {% if type == 'php' %}
-    index  index.php
+    index  index.php;
     # Pass PHP scripts to PHP-FPM
     location ~* \.php$ {
         fastcgi_pass    unix:{{ socket }};
@@ -37,6 +37,6 @@ server {
         fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
     }
 {% else %}
-    index  index.html
+    index  index.html;
 {% endif %}
 }
