--- a/nginx/templates/server.conf.j2
+++ b/nginx/templates/server.conf.j2
@@ -5,7 +5,9 @@ server {
     server_name {{ name }};
     root        {{ root }};
 
-    # Logging --
+    limit_conn default 32;
+
+    # Logging
     access_log  /var/log/nginx/{{ name}}.access.log;
     error_log   /var/log/nginx/{{ name }}.error.log notice;
 
@@ -20,12 +22,38 @@ server {
         expires        max;
     }
 
+
+    # Security settings
+
     # Prevent access to hidden files
     location ~ /\. {
         access_log     off;
         log_not_found  off;
         deny all;
     }
+
+    # Deny access based on the User-Agent header.
+    if ($bad_bot) {
+        return 444;
+    }
+
+    # Deny access based on the Referer header.
+    if ($bad_referer) {
+        return 444;
+    }
+
+    ## Protection against illegal HTTP methods.
+    if ($not_allowed_method) {
+        return 405;
+    }
+
+    ## Including the php-fpm status and ping pages config.
+    ## Uncomment to enable if you're running php-fpm.
+    #include php_fpm_status_server.conf;
+
+    ## Including the Nginx stub status page for having stats about
+    ## Nginx activity: http://wiki.nginx.org/HttpStubStatusModule.
+    include nginx_status_server.conf;
 
 {% if type == 'php' %}
     index  index.php;
@@ -35,6 +63,7 @@ server {
         include         fastcgi_params;
         fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
         fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
+        fastcgi_keep_conn on; # keep alive to the FCGI upstream
     }
 {% else %}
     index  index.html;
