--- a/nginx/templates/php_fpm_status_server.conf.j2
+++ b/nginx/templates/php_fpm_status_server.conf.j2
@@ -1,16 +1,18 @@
 ### The configuration for the status pages of php-fpm. As described in
 ### http://www.php.net/manual/en/install.fpm.configuration.php.
 
-location = /fpm-status {
+{% for upstream in nginx_fastcgi_upstreams %}
+location = /fpm-status-{{ upstream.name }} {
     if ($dont_show_status) {
         return 404;
     }
-    fastcgi_pass phpcgi;
+    fastcgi_pass {{ upstream.name }};
 }
 
-location = /ping {
+location = /ping-{{ upstream.name }} {
     if ($dont_show_status) {
         return 404;
     }
-    fastcgi_pass phpcgi;
+    fastcgi_pass {{ upstream.name }};
 }
+{% endfor %}
