Varnish module + bug corrections

--- a/nginx/templates/upstream_fcgi.conf.j2
+++ b/nginx/templates/upstream_fcgi.conf.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 
-# Upstream configuration for astCGI.
+# Upstream configuration for fastCGI.
 
 # This configuration assumes by default that keepalive
 # upstream connections are supported and that you have a Nginx
