--- a/varnish/templates/varnish.conf.j2
+++ b/varnish/templates/varnish.conf.j2
@@ -1,4 +1,4 @@
-{{ ansible_managed }}
+# {{ ansible_managed }}
 
 # Configuration file for varnish
 #
@@ -62,7 +62,7 @@ VARNISH_VCL_CONF=/etc/varnish/default.vcl
 # # Default address and port to bind to
 # # Blank address means all IPv4 and IPv6 interfaces, otherwise specify
 # # a host name, an IPv4 dotted quad, or an IPv6 address in brackets.
-VARNISH_LISTEN_ADDRESS={{ varnish_addr }}
+VARNISH_LISTEN_ADDRESS={{ varnish_addr|default('') }}
 VARNISH_LISTEN_PORT={{ varnish_port|default('6081') }}
 
 # # Telnet admin interface listen address and port
