--- a/roles/git/templates/gitconfig.j2
+++ b/roles/git/templates/gitconfig.j2
@@ -12,3 +12,15 @@ editor = {{ git_coreeditor|default('vi') }}
 
 [push]
 default = {{ git_pushdefault|default('current') }}
+
+# Useful aliases
+# cf. https://git.wiki.kernel.org/index.php/Aliases
+[alias]
+st = status
+ci = commit
+br = branch
+co = checkout
+df = diff
+dc = diff --cached
+lg = log -p
+who = shortlog -s --
